--- a/css/grid.css
+++ b/css/grid.css
@@ -1,144 +1,129 @@
+  
 
-html {
-    box-sizing: border-box;
-  }
-
-#hide {
-    display: none;
+.grid-con {
+  display: grid;
+  grid-template-columns: repeat(4, minmax(0, 1fr));
+  grid-column-gap: 30px;
+  max-width: 767px;
+  margin: 0 auto;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 
-.box {
-    background-color: powderblue;
-    color: rgb(27, 27, 27);
-    border-radius: 5px;
-    padding: 20px;
-    text-align: center;
-    margin-top: 10px;
-    margin-bottom: 10px;
+/* 2. ---Mobile Grid--- */
+
+
+.col-span-1 {
+  grid-column: span 1 / span 1;
+}
+.col-span-2 {
+  grid-column: span 2 / span 2;
+}
+.col-span-3 {
+  grid-column: span 3 / span 3;
+}
+.col-span-4 {
+  grid-column: span 4 / span 4;
+}
+.col-span-full {
+  grid-column: 1/-1;
+}
+
+/* 3. ---Tablet Grid --- */
+
+@media screen and (min-width: 768px) {
+  .grid-con {
+    grid-template-columns: repeat(12, minmax(0, 1fr));
+    grid-column-gap: 20px;
+    max-width: 1199px;
+    padding-left: 16px;
+    padding-right: 16px;
   }
   
-/* Mobile Grid */
-
-#hide {
-    display: none;
-  }
-  .col-span-1 {
+  .m-col-span-1 {
     grid-column: span 1 / span 1;
   }
-  .col-span-2 {
+  .m-col-span-2 {
     grid-column: span 2 / span 2;
   }
-  .col-span-3 {
+  .m-col-span-3 {
     grid-column: span 3 / span 3;
   }
-  .col-span-4 {
+  .m-col-span-4 {
     grid-column: span 4 / span 4;
   }
-  .col-span-full {
-    grid-column: 1/-1;
+  .m-col-span-5 {
+    grid-column: span 5 / span 5;
   }
-
-  /* Tablet Grid */
-
-  @media screen and (min-width: 768px) {
-    .grid-con {
-      grid-template-columns: repeat(12, minmax(0, 1fr));
-      grid-column-gap: 20px;
-      max-width: 1199px;
-      padding-left: 16px;
-      padding-right: 16px;
-    }
-    #hide {
-      display: block;
-    }
-  
-    .m-col-span-1 {
-      grid-column: span 1 / span 1;
-    }
-    .m-col-span-2 {
-      grid-column: span 2 / span 2;
-    }
-    .m-col-span-3 {
-      grid-column: span 3 / span 3;
-    }
-    .m-col-span-4 {
-      grid-column: span 4 / span 4;
-    }
-    .m-col-span-5 {
-      grid-column: span 5 / span 5;
-    }
-    .m-col-span-6 {
-      grid-column: span 6 / span 6;
-    }
-    .m-col-span-7 {
-      grid-column: span 7 / span 7;
-    }
-    .m-col-span-8 {
-      grid-column: span 8 / span 8;
-    }
-    .m-col-span-9 {
-      grid-column: span 9 / span 9;
-    }
-    .m-col-span-10 {
-      grid-column: span 10 / span 10;
-    }
-    .m-col-span-11 {
-      grid-column: span 11 / span 11;
-    }
-    .m-col-span-12 {
-      grid-column: span 12 / span 12;
-    }
+  .m-col-span-6 {
+    grid-column: span 6 / span 6;
   }
+  .m-col-span-7 {
+    grid-column: span 7 / span 7;
+  }
+  .m-col-span-8 {
+    grid-column: span 8 / span 8;
+  }
+  .m-col-span-9 {
+    grid-column: span 9 / span 9;
+  }
+  .m-col-span-10 {
+    grid-column: span 10 / span 10;
+  }
+  .m-col-span-11 {
+    grid-column: span 11 / span 11;
+  }
+  .m-col-span-12 {
+    grid-column: span 12 / span 12;
+  }
+}
 
-/* Desktop Grid */
+/* 4. ---Desktop Grid --- */
 
 @media screen and (min-width: 1200px) {
-    .grid-con {
-      grid-column-gap: 30px;
-      max-width: 1919px;
-      padding-left: 15px;
-      padding-right: 15px;
-    }
-  
-    #hide {
-      display: none;
-    }
-  
-    .l-col-span-1 {
-      grid-column: span 1 / span 1;
-    }
-    .l-col-span-2 {
-      grid-column: span 2 / span 2;
-    }
-    .l-col-span-3 {
-      grid-column: span 3 / span 3;
-    }
-    .l-col-span-4 {
-      grid-column: span 4 / span 4;
-    }
-    .l-col-span-5 {
-      grid-column: span 5 / span 5;
-    }
-    .l-col-span-6 {
-      grid-column: span 6 / span 6;
-    }
-    .l-col-span-7 {
-      grid-column: span 7 / span 7;
-    }
-    .l-col-span-8 {
-      grid-column: span 8 / span 8;
-    }
-    .l-col-span-9 {
-      grid-column: span 9 / span 9;
-    }
-    .l-col-span-10 {
-      grid-column: span 10 / span 10;
-    }
-    .l-col-span-11 {
-      grid-column: span 11 / span 11;
-    }
-    .l-col-span-12 {
-      grid-column: span 12 / span 12;
-    }
+  .grid-con {
+    grid-column-gap: 30px;
+    max-width: 1919px;
+    padding-left: 50px;
+    padding-right: 50px;
   }
-  
+
+
+  .l-col-span-1 {
+    grid-column: span 1 / span 1;
+  }
+  .l-col-span-2 {
+    grid-column: span 2 / span 2;
+  }
+  .l-col-span-3 {
+    grid-column: span 3 / span 3;
+  }
+  .l-col-span-4 {
+    grid-column: span 4 / span 4;
+  }
+  .l-col-span-5 {
+    grid-column: span 5 / span 5;
+  }
+  .l-col-span-6 {
+    grid-column: span 6 / span 6;
+  }
+  .l-col-span-7 {
+    grid-column: span 7 / span 7;
+  }
+  .l-col-span-8 {
+    grid-column: span 8 / span 8;
+  }
+  .l-col-span-9 {
+    grid-column: span 9 / span 9;
+  }
+  .l-col-span-10 {
+    grid-column: span 10 / span 10;
+  }
+  .l-col-span-11 {
+    grid-column: span 11 / span 11;
+  }
+  .l-col-span-12 {
+    grid-column: span 12 / span 12;
+  }
+}
+
